--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:slnt,wght@-4,100..1000;0,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:slnt,wght@-4,100..1000;0,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 *{
     margin: 0;
@@ -8,17 +9,22 @@
 header {
     width: 100%;
     background-color: #28595f;
+    margin-bottom: 2%;
 }
 
-div {
+#descuento {
     text-align: center;
     color: #eeeae4;
+    font-size: 14px;
+    padding: 0.5%;
+    border-bottom: #eeeae4 solid 1px;
 }
 
 body {
     background-color: #fdf6ec;
     font-family: "Afacad Flux", sans-serif;
-    font-size:large;
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
     color: #28595f;
 }
 
@@ -27,14 +33,16 @@ nav {
     background-color: #28595f;
     position: sticky;
     text-align: center;
-    padding: 10px;
+    padding: 1%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 nav ul {
     display: flex;
     justify-content:center;
+    align-items: center;
 }
 
 nav li {
@@ -42,7 +50,7 @@ nav li {
     list-style: none;
 }
 
-nav a {
+nav a, footer a {
     text-decoration: none;
 }
 
@@ -52,40 +60,37 @@ h1 {
 
 h2, h3 {
     color: #28595f;
+
 }
 
 footer {
-    
     background-color: #28595f;
     margin-top: 5%;
     color: #eeeae4;
+    padding-top: 2%;
+    padding-bottom: 2%;
     text-align: center;
-    padding: 2%;
-}
-
-footer p {
-    color: #fdf6ec;
 }
 
 footer li {
+    list-style: none;
+}
+
+.caja1 {
+    width: 100%;
+    margin-bottom: 2%;
+    padding-bottom: 2%;
+    border-bottom: #eeeae4 solid 1px;
+}
+
+.caja1 ul {
+    display: flex;
+    justify-content: center;
+    gap: 3%;
+}
+
+.foo li {
     display: inline;
-}
-
-.cajas {
-    display: block;
-    text-align: left;
-    margin-left: 2%;
-    margin-top: 1%;
-    background-color: #fdf6ec;
-    color: #28595f;
-}
-
-#nosotros {
-    text-align: center;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 3%;
 }
 
 section {
@@ -93,7 +98,68 @@ section {
 }
 
 main {
-    margin-left: 2%;
+    text-align: center;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
+}
+
+#principal h2 {
+    margin-bottom: 3%;
+}
+
+.flexprin {
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: space-evenly;
+}
+
+#nosotros {
+    text-align: center;
+    display: flex;
+    margin: 2.7%;
+    width: 70%;
+    padding: 4%;
+    margin-left: auto;
+    margin-right: auto;
+    border:#28595f solid 1px;
+    border-radius: 5px;
+}
+
+.flexnos {
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.medias {
+    padding: 1%;
+    border: 1px;
+    border-style:solid;
+    border-radius: 1%;
+    border-color: #28595f;
+    background-color: #eeeae4;
+}
+
+form {
+    text-align: justify;
+}
+
+#cont {
+    display: flex;
+    width: 100%;
+    margin-top: 4.5%;
+}
+
+.c1 {
+    width: 40%;
+}
+
+.c2 {
+    width: 60%;
 }
 
 input {
@@ -102,9 +168,9 @@ input {
     border-radius: 5px;
     border-width: 1px;
     background-color: #fdf6ec;
-    background-color: #eeeae4;
-    width: 20%;
     padding: 5px;
+    width: 80%;
+    height: 20px;
 }
 
 textarea {
@@ -113,8 +179,8 @@ textarea {
     border-radius: 5px;
     border-width: 1px;
     background-color: #fdf6ec;
-    background-color: #eeeae4;
     padding: 5px;
+    width: 80%;
 }
 
 ::placeholder {
@@ -123,23 +189,85 @@ textarea {
 
 nav input {
     width: 10%;
+    height: 3%;
     padding: 5px;
     margin: 5px;
     color: #28595f;
     border-radius: 5px;
+    background-color: #eeeae4;
 }
 
 #boton {
-    width: 5%;
-    padding: 5px;
+    margin-top: 15px;
+    width: 15%;
+    padding-bottom: 20px;
+    background-color: #eeeae4;
+    color: #28595f;
+}
+
+#boton:hover {
     background-color: #28595f;
-    color: #fdf6ec;
+    color: #eeeae4;
+}
+
+footer h4 {
+    margin-bottom: 5px;
 }
 
 main img, section iframe {
-    border: 3px;
+    border: 4px;
     border-color: #eeeae4;
-    border-radius: 2px;
+    border-radius: 4px;
     border-style: solid;
-    border-radius: 5px;
+}
+
+#info {
+    margin-top: 3%;
+    padding: 3%;
+    background-color: #eeeae4;
+    display: flex;
+    justify-content: center;
+}
+
+.infoo {
+    display: flex;
+    align-items: center;
+    width: 20%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#info i {
+    font-size: xx-large;
+    padding: 7%;
+    margin-right: 5%;
+    border: #28595f solid 1px;
+    border-radius: 50%;
+}
+
+.infoo a {
+    text-decoration: none;
+}
+
+@media (max-width: 600px) {
+    #cont {
+        display: inline;
+    }
+    .cajacont {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .c2 {
+        text-align: justify;
+        margin-left: 4%;
+
+    }
+    input {
+        width: 90%;
+    }
+    
+    textarea {
+        width: 90%;
+    }
 }
