arreglo de links

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ nav li {
     list-style: none;
 }
 
-nav a, footer a {
+a, footer a {
     text-decoration: none;
 }
 
@@ -243,10 +243,6 @@ main img, section iframe {
     margin-right: 5%;
     border: #28595f solid 1px;
     border-radius: 50%;
-}
-
-.infoo a {
-    text-decoration: none;
 }
 
 @media (max-width: 600px) {
